--- a/package.json
+++ b/package.json
@@ -9,15 +9,42 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.4",
+    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/react": "^2.4.9",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.4",
+    "@strapi-newsletter/react": "^1.0.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
-    "eslint": "8.32.0",
+    "axios": "^1.2.3",
+    "dayjs": "^1.11.7",
+    "editorjs-blocks-react-renderer": "^1.3.0",
+    "editorjs-html": "^3.4.2",
     "eslint-config-next": "13.1.4",
+    "formik": "^2.2.9",
+    "framer-motion": "^8.5.0",
+    "graphql": "^16.6.0",
     "next": "13.1.4",
+    "next-seo": "^5.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-html-parser": "^2.0.2",
+    "swiper": "^8.4.6",
+    "typescript": "4.9.4",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "@types/react-html-parser": "^2.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react-hooks": "^4.3.0"
   }
 }
