--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-html-parser": "^2.0.2",
+    "sharp": "^0.31.3",
     "swiper": "^8.4.6",
     "typescript": "4.9.4",
     "yup": "^0.32.11"
