--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "next": "13.1.4",
     "next-seo": "^5.15.0",
     "react": "18.2.0",
+    "react-anchor-link-smooth-scroll-v2": "^2.0.1",
     "react-dom": "18.2.0",
+    "react-share": "^4.4.1",
     "sharp": "^0.31.3",
     "swiper": "^8.4.6",
     "typescript": "4.9.4",
