--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "formik": "^2.2.9",
     "framer-motion": "^8.5.0",
     "graphql": "^16.6.0",
+    "html-react-parser": "^3.0.8",
     "next": "13.1.4",
     "next-seo": "^5.15.0",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-anchor-link-smooth-scroll-v2": "^2.0.1",
     "react-dom": "18.2.0",
     "react-share": "^4.4.1",
+    "react-sticky": "^6.0.3",
     "sharp": "^0.31.3",
     "swiper": "^8.4.6",
     "typescript": "4.9.4",
@@ -40,6 +43,7 @@
   },
   "devDependencies": {
     "@types/react-html-parser": "^2.0.2",
+    "@types/react-sticky": "^6.0.4",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "eslint": "^8.2.0",
