--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.3",
+    "cookies-next": "^2.1.1",
     "dayjs": "^1.11.7",
     "editorjs-blocks-react-renderer": "^1.3.0",
     "editorjs-html": "^3.4.2",
