--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "18.2.0",
     "react-share": "^4.4.1",
     "react-sticky": "^6.0.3",
+    "react-uuid": "^2.0.0",
     "sharp": "^0.31.3",
     "swiper": "^8.4.6",
     "typescript": "4.9.4",
