--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "algoliasearch": "^4.14.3",
     "axios": "^1.2.3",
     "cookies-next": "^2.1.1",
     "dayjs": "^1.11.7",
@@ -29,12 +30,14 @@
     "framer-motion": "^8.5.0",
     "graphql": "^16.6.0",
     "html-react-parser": "^3.0.8",
+    "instantsearch.css": "^8.0.0",
     "next": "13.1.4",
     "next-seo": "^5.15.0",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-anchor-link-smooth-scroll-v2": "^2.0.1",
     "react-dom": "18.2.0",
+    "react-instantsearch-hooks-web": "^6.39.3",
     "react-share": "^4.4.1",
     "react-sticky": "^6.0.3",
     "react-uuid": "^2.0.0",
@@ -48,11 +51,13 @@
     "@types/react-sticky": "^6.0.4",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
+    "css-loader": "^6.7.3",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.32.1",
-    "eslint-plugin-react-hooks": "^4.3.0"
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "style-loader": "^3.3.1"
   }
 }
