--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
     "react-uuid": "^2.0.0",
     "sharp": "^0.31.3",
     "swiper": "^8.4.6",
-    "typescript": "4.9.4",
-    "yup": "^0.32.11"
+    "typescript": "4.9.4"
   },
   "devDependencies": {
     "@types/react-html-parser": "^2.0.2",
