--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "html-react-parser": "^3.0.8",
     "instantsearch.css": "^8.0.0",
     "next": "13.1.4",
+    "next-cloudinary": "^2.3.0",
     "next-seo": "^5.15.0",
     "nextjs-progressbar": "^0.0.16",
     "prismjs": "^1.29.0",
